Fixed skill requirements not showing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,7 +173,7 @@ input[type=button] {
 
 .skillReq {
   margin: 0px;
-  font-size: 50%;
+  font-size: 32%;
   color: #4c9366;
   height: 49.99%;
   font-weight: bold;
